apply formatter